--- a/package.json
+++ b/package.json
@@ -19,6 +19,12 @@
     "tailwindcss": "^3.4.10"
   },
   "devDependencies": {
-    "npm-run-all": "^4.1.5"
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.4",
+    "babel-loader": "^9.1.3",
+    "npm-run-all": "^4.1.5",
+    "webpack": "^5.94.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.1.0"
   }
 }
